# ene

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
core/: Cargo.toml  LICENSE
core/src/: alg.rs  common.rs  define.rs  error.rs  format.rs  lib.rs
core/src/aead/: aes128colm0.rs  mod.rs  norx_mrs.rs
core/src/format/: alg.rs  mod.rs  proto.rs
core/src/key/: ed25519.rs  kyber.rs  mod.rs  ristretto_dh.rs  ristrettodh.rs
core/src/proto/: mod.rs  ooake.rs  sigae.rs  sigonly.rs  sonly.rs
core/tests/: format.rs  pqc_test.rs  test.rs
core/tests/common/: mod.rs
examples/: dummy_askpass.rs
src/: common.rs  main.rs  opts.rs  profile.rs
src/contact/: db.rs  mod.rs  recvfrom.rs  sendto.rs
tests/: alice.ene  alice.pk.ene  cmd.rs  pqc_cmd.rs
tests/common/: alice.ene  alice.pk.ene  mod.rs
