cargo-features = ["edition"]

[package]
name = "ene"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
description = "An experimental end to end email encryption tool"
license = "MIT"
edition = "2018"

[workspace]
members = [ "core" ]

[features]
pqc = [ "ene-core/pqc" ]

[dependencies]
ene-core = { path = "./core" }

argon2rs = "0.2"
rand = "0.5"
serde = "1"
serde_bytes = "0.10"
serde_cbor = "0.8"

failure = "0.1"
clap = "2"
structopt = "0.2"
# human-panic = "*"
directories = "1"
termcolor = "1"
ttyaskpass = { git = "https://github.com/quininer/ttyaskpass", branch = "mortal" }

sled = "0.15"

[dev-dependencies]
serde_derive = "1"
escargot = "0.2"
assert_fs = "0.3"
assert_cmd = "0.6"
