cargo-features = ["edition"]

[package]
name = "ene"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
description = "ENE is an end-to-end encryption tool designed for mail"
categories = [ "cryptography", "command-line-utilities" ]
license = "MIT"
edition = "2018"

[workspace]
members = [ "core" ]

[features]
post-quantum = [ "ene-core/post-quantum" ]

[dependencies]
ene-core = { path = "./core" }

argon2rs = { version = "0.2", features = [ "simd" ] }
rand = "0.5"
serde = "1"
serde_bytes = "0.10"
serde_cbor = "0.8"

failure = "0.1"
clap = "2"
structopt = "0.2"
# human-panic = "*"
directories = "1"
termcolor = "1"
ttyaskpass = { git = "https://github.com/quininer/ttyaskpass", branch = "mortal" }

sled = "0.15"

[build-dependencies]
clap = "2"
structopt = "0.2"
ene-core = { path = "./core" }

[dev-dependencies]
serde_derive = "1"
escargot = "0.2"
assert_fs = "0.3"
assert_cmd = "0.6"

[badges]
travis-ci = { repository = "quininer/ene" }
appveyor = { repository = "quininer/ene" }

[badges.maintenance]
status = "experimental"

[profile.release]
lto = true
