cargo-features = ["edition"]

[package]
name = "ene-core"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[dependencies]
failure = "*"
arrayref = "*"

rand = "*"
sha3 = "*"
digest = "*"
subtle = "*"
curve25519-dalek = { version = "*", features = [ "serde" ] }
ed25519-dalek = { version = "*", features = [ "serde" ] }

generic-array = "*"
colm = "*"
aes = "*"

serde = "*"
serde_derive = "*"
serde_cbor = "*"
