cargo-features = ["edition"]

[package]
name = "ene-core"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
license = "MIT"
edition = "2018"

[features]
post-quantum = [ "sarkara" ]

[dependencies]
failure = "0.1"
arrayref = "0.3"

rand = "0.5"
sha3 = "0.7"
digest = "0.7"
subtle = "0.7"
curve25519-dalek = { version = "0.19", features = [ "avx2_backend", "serde" ] }
ed25519-dalek = { version = "0.8", features = [ "avx2_backend", "serde" ] }
sarkara = { version = "=0.10.0-alpha.4", features = [ "simd", "serde" ], optional = true }

generic-array = "0.9"
colm = "0.1"
aes = "0.2"
seckey = { version = "0.9", features = [ "nightly" ] }

serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.10"

semver = "0.9"
siphasher = "0.2"

[dev-dependencies]
serde_cbor = "0.8"
